--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,7 +6,7 @@
     <title>Home</title>
 </head>
 <body>
-    <h1>Welcome to My App!</h1>
+    <h1>Welcome to this simple application</h1>
     <p>Explore the app using the links below:</p>
     <ul>
         <li><a href="/about">About</a></li>
