--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Welcome to My App!</h1>
-    <h1>You can write your name below</h1>
+    <h1>You can write your name below and when you press submit it will go on a different page</h1>
     <p>Explore the app using the links below:</p>
     <ul>
         <li><a href="/about">About</a></li>
