--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,27 +7,11 @@
 </head>
 <body>
     <h1>Welcome to My App!</h1>
-    <h2>Data from info_table</h2>
-    <table border="1">
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>First Name</th>
-                <th>Created At</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for row in data %}
-            <tr>
-                <td>{{ row[0] }}</td>
-                <td>{{ row[1] }}</td>
-                <td>{{ row[2] }}</td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+    <h2>Database Credentials</h2>
+    <p><strong>Username:</strong> {{ db_user }}</p>
+    <p><strong>Password:</strong> {{ db_password }}</p>
 
-    <h1>You can write your name below and when you press submit it will go on a different page</h1>
+    <p>You can write your name below, and when you press submit, it will go on a different page</p>
     <p>Explore the app using the links below:</p>
     <ul>
         <li><a href="/about">About</a></li>
