--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Welcome to My App!</h1>
     <p>You can write your name below, and when you press submit, it will go on a different page</p>
+    <p>After that you can go back</p>
     <p>Explore the app using the links below:</p>
     <ul>
         <li><a href="/about">About</a></li>
