--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,6 +8,7 @@
 <body>
     <h1>Welcome to My App!</h1>
     <p>Explore the app using the links below:</p>
+    <p>Explore the app using the links and check this out</p>
     <ul>
         <li><a href="/about">About</a></li>
     </ul>
