--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,6 +10,7 @@
     <p>You can write your name below, and when you press submit, it will go on a different page</p>
     <p>After that you can go back</p>
     <p>Explore the app using the links below:</p>
+    <p>Simple small app</p>
     <ul>
         <li><a href="/about">About</a></li>
     </ul>
